--- a/index.html
+++ b/index.html
@@ -37,83 +37,105 @@
   <!-- WORK SECTION -->
   <section class="work" id="work">
     <h2>Selected Work</h2>
+<!-- WORK SECTION -->
+<section class="work" id="work">
+  <h2>Selected Work</h2>
 
-    <!-- PROJECTS -->
-    <div class="projects">
+  <div class="projects">
 
-      <!-- PROJECT TEMPLATE -->
-      <div class="project" onclick="toggleVideo('v1')">
+    <!-- PROJECT 1 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v1')">
         <img src="https://img.youtube.com/vi/lC7F3fV5jPM/hqdefault.jpg" class="thumb" />
         <h3>Radical Craft: Arts Education at Hull-House, 1889–1935</h3>
         <p class="role">Producer & Editor • Chicago</p>
-
-        <div id="v1" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/lC7F3fV5jPM" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v2')">
+      <div id="v1" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/lC7F3fV5jPM" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 2 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v2')">
         <img src="https://img.youtube.com/vi/iLEqznlnLvQ/hqdefault.jpg" class="thumb" />
         <h3>2025 Cyrus Tang Foundation Music Summer Camp – Documentary</h3>
         <p class="role">Director & Camera • Global Production (China)</p>
-
-        <div id="v2" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/iLEqznlnLvQ" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v3')">
+      <div id="v2" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/iLEqznlnLvQ" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 3 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v3')">
         <img src="https://img.youtube.com/vi/ieR-T3wxkYw/hqdefault.jpg" class="thumb" />
         <h3>Big Shoulders Fund × NAMI Chicago</h3>
         <p class="role">Producer & Editor • Indiana</p>
-
-        <div id="v3" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/ieR-T3wxkYw" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v4')">
+      <div id="v3" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/ieR-T3wxkYw" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 4 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v4')">
         <img src="https://img.youtube.com/vi/mhWSlULTgzI/hqdefault.jpg" class="thumb" />
         <h3>2024 Women in Wellness Awards Brunch</h3>
         <p class="role">Producer & Editor • Chicago</p>
-
-        <div id="v4" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/mhWSlULTgzI" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v5')">
+      <div id="v4" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/mhWSlULTgzI" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 5 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v5')">
         <img src="https://img.youtube.com/vi/R4DZ6pdBeDU/hqdefault.jpg" class="thumb" />
         <h3>Cat City</h3>
         <p class="role">Producer • Chicago</p>
-
-        <div id="v5" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/R4DZ6pdBeDU" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v6')">
+      <div id="v5" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/R4DZ6pdBeDU" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 6 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v6')">
         <img src="https://img.youtube.com/vi/YrFPb5Pmof4/hqdefault.jpg" class="thumb" />
         <h3>Data Management for Student Success — Toolkit</h3>
         <p class="role">Project Manager & Producer • Washington D.C.</p>
-
-        <div id="v6" class="video hidden">
-          <iframe src="https://www.youtube.com/embed/YrFPb5Pmof4" allowfullscreen></iframe>
-        </div>
       </div>
 
-      <div class="project" onclick="toggleVideo('v7')">
+      <div id="v6" class="video hidden">
+        <iframe src="https://www.youtube.com/embed/YrFPb5Pmof4" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- PROJECT 7 -->
+    <div class="project">
+      <div class="project-click" onclick="toggleVideo('v7')">
         <img src="https://vumbnail.com/1083612453.jpg" class="thumb" />
         <h3>College Possible Chicago</h3>
         <p class="role">Producer • Chicago</p>
-
-        <div id="v7" class="video hidden">
-          <iframe src="https://player.vimeo.com/video/1083612453?h=a7b657a789" allowfullscreen></iframe>
-        </div>
       </div>
 
+      <div id="v7" class="video hidden">
+        <iframe src="https://player.vimeo.com/video/1083612453?h=a7b657a789" allowfullscreen></iframe>
+      </div>
     </div>
-  </section>
+
+  </div>
+</section>
 
   <!-- TESTIMONIALS -->
   <section class="testimonials">
