--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
     </p>
   </section>
 
-  <!-- WORK SECTION -->
-  <section class="work" id="work">
-    <h2>Selected Work</h2>
-<!-- WORK SECTION -->
-<section class="work" id="work">
-  <h2>Selected Work</h2>
+ <section class="work" id="work">
+  ...
+</section>
+
 
   <div class="projects">
 
