--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
 </section> <!-- end of Selected Work -->
 
-<!-- WBEZ · NPR AFFILIATE SECTION -->
+  <!-- WBEZ · NPR AFFILIATE SECTION -->
 <section class="wbez">
-  <h2>WBEZ 91.5FM · NPR Affiliate</h2>
+  
+  <div class="section-divider"></div>
 
-  <p class="wbez-subtitle">
-    Select audio journalism and radio production credits:
-  </p>
+  <h2 class="wbez-title">WBEZ 91.5FM · NPR Affiliate</h2>
+  <p class="wbez-subtitle">Selected audio journalism & radio production</p>
 
   <div class="wbez-list">
 
@@ -161,16 +161,14 @@
 
   </div>
 
-  <div class="wbez-button-wrapper">
-    <a
-      class="wbez-button"
-      href="https://www.wbez.org/author/kyra-mitchell"
-      target="_blank"
-    >
-      View All Episodes on WBEZ
-    </a>
-  </div>
+  <a class="wbez-button" href="https://www.wbez.org/author/kyra-mitchell" target="_blank">
+    View All Episodes on WBEZ
+  </a>
+
+  <div class="section-divider"></div>
+
 </section>
+
   
 
   <!-- TESTIMONIALS -->
