--- a/index.html
+++ b/index.html
@@ -55,9 +55,16 @@
         <iframe src="https://www.youtube.com/embed/lC7F3fV5jPM" allowfullscreen></iframe>
       </div>
     </div>
-
-
-    <!-- PROJECT 3 -->
+<!-- PROJECT 3 -->
+    
+    <div class="project">
+      <h3>What does the Black Metropolis Research Consortium (BMRC) do?</h3>
+      <p class="role">Producer & Camera • Chicago</p>
+      <div class="video">
+        <iframe src="https://youtu.be/NgQG7IxWYJQ?si=7nMD9vSjGinxOZET" allowfullscreen></iframe>
+      </div>
+    </div>
+    <!-- PROJECT 4 -->
     <div class="project">
       <h3>Big Shoulders Fund × NAMI Chicago</h3>
       <p class="role">Producer & Editor • Indiana</p>
@@ -66,7 +73,7 @@
       </div>
     </div>
 
-    <!-- PROJECT 4 -->
+    <!-- PROJECT 5 -->
     <div class="project">
       <h3>2024 Women in Wellness Awards Brunch</h3>
       <p class="role">Producer & Editor • Chicago</p>
@@ -75,7 +82,7 @@
       </div>
     </div>
 
-    <!-- PROJECT 5 -->
+    <!-- PROJECT 6 -->
     <div class="project">
       <h3>Cat City</h3>
       <p class="role">Producer • Chicago</p>
@@ -84,7 +91,7 @@
       </div>
     </div>
 
-    <!-- PROJECT 6 -->
+    <!-- PROJECT 7 -->
     <div class="project">
       <h3>Data Management for Student Success — Toolkit</h3>
       <p class="role">Project Manager & Producer • Washington D.C.</p>
@@ -93,7 +100,7 @@
       </div>
     </div>
 
-    <!-- PROJECT 7 -->
+    <!-- PROJECT 8 -->
     <div class="project">
       <h3>College Possible Chicago</h3>
       <p class="role">Producer • Chicago</p>
