--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h3>What does the Black Metropolis Research Consortium (BMRC) do?</h3>
       <p class="role">Producer & Camera • Chicago</p>
       <div class="video">
-        <iframe src="https://youtu.be/NgQG7IxWYJQ?si=7nMD9vSjGinxOZET" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/NgQG7IxWYJQ" allowfullscreen></iframe>
       </div>
     </div>
     <!-- PROJECT 4 -->
